--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,10 +1,10 @@
 {
+	"extends": "../tsconfig.base.json",
 	"compilerOptions": {
 		"target": "es6",
 		"module": "commonjs",
 		"moduleResolution": "node",
 		"sourceMap": true,
-		"strict": true,
 		"outDir": "out",
 		"rootDir": "src",
 		"esModuleInterop": true
