--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,5 @@
   "dependencies": {
     "vscode-languageclient": "^5.2.1"
   },
-  "devDependencies": {
-		"vscode": "^1.1.35"
-	}
+  "devDependencies": {}
 }
