--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "vscode": "^1.1.36",
     "vscode-languageclient": "^5.2.1"
   },
   "devDependencies": {}
