--- a/package.json
+++ b/package.json
@@ -25,16 +25,9 @@
 		"compile": "npm run compile:client && npm run compile:server",
 		"postinstall": "cd client && npm install && cd ../server && npm install && cd .."
 	},
+	"dependencies": {},
 	"devDependencies": {
-		"@types/glob": "^7.1.1",
-		"@types/mocha": "^5.2.7",
 		"@types/node": "^12.11.7",
-		"@types/vscode": "^1.41.0",
-		"glob": "^7.1.5",
-		"mocha": "^6.2.2",
-		"tslint": "^5.20.0",
-		"typescript": "^3.6.4",
-		"vscode-test": "^1.2.2",
-		"vscode-textmate": "^4.4.0"
+		"typescript": "^3.6.4"
 	}
 }
