--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,10 @@
     "@types/google-translate-api": "^2.3.0",
     "@types/request": "^2.48.4",
     "google-translate-api": "^2.3.0",
-    "vscode-languageserver": "^5.2.1"
+    "onigasm": "^2.2.4",
+    "vscode-languageserver": "^5.2.1",
+    "vscode-textmate": "^4.4.0",
+    "node-gyp": "^4.0.0"
   },
   "devDependencies": {}
 }
