--- a/package.json
+++ b/package.json
@@ -14,7 +14,19 @@
 	],
 	"main": "./client/out/extension",
 	"contributes": {
-		"commands": []
+		"commands": [
+			{
+                "command": "dustleafComment.variableConversion",
+                "title": "%dustleafComment.variableConversion%",
+                "category": "dustleaf Comment"
+            }
+        ],
+        "keybindings": [
+            {
+                "command": "dustleafComment.variableConversion",
+                "key": "ctrl+shift+t"
+            }
+        ]
 	},
 	"scripts": {
 		"vscode:prepublish": "cd client && npm run update-vscode && cd .. && npm run compile",
